# basketball-vision-ai

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/demo_videos/: README.md
docs/: analytics.md  milestone_1.md  pipeline_demo.md  real_inference.md  testing.md  visualization.md
docs/milestones/: milestone_2.md  milestone_3.md
examples/: analytics_demo.py  full_pipeline_demo.py  render_demo.py  run_pipeline.py  yolo_detection.py
src/basketball_vision/: __init__.py
tests/: conftest.py
tests/analytics/: test_analytics_config.py  test_analytics_engine.py  test_analytics_factory.py  test_exporters.py  test_game_statistics.py  test_player_statistics.py  test_statistics_result.py
tests/classification/: test_base_classifier.py  test_classification_config.py  test_classification_factory.py  test_color_team_classifier.py  test_player_team.py
tests/cli/: test_cli_config.py  test_export.py  test_main.py
tests/detection/: test_base_detector.py  test_config.py  test_converters.py  test_detections.py  test_factory.py  test_yolo_config.py  test_yolo_detector.py  test_yolo_factory.py
tests/examples/: test_analytics_demo.py  test_full_pipeline_demo.py
tests/integration/: test_detector_pipeline.py
tests/pipeline/: test_pipeline.py  test_pipeline_config.py  test_pipeline_factory.py  test_pipeline_result.py
tests/recognition/: test_base_recognizer.py  test_number.py  test_recognition_config.py  test_recognition_factory.py  test_simple_number_recognizer.py
tests/tracking/: test_base_tracker.py  test_simple_tracker.py  test_track.py  test_tracking_config.py  test_tracking_factory.py
tests/video/: test_exceptions.py  test_frame_iterator.py  test_loader.py  test_metadata.py  (+2 more)
(+74 files in other folders)
