[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basketball-vision-ai"
version = "0.1.0"
description = "Production-quality basketball computer vision platform."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Arjun Kasturi" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]