[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basketball-vision-ai"
version = "0.1.0"
description = "Production-quality basketball computer vision platform."
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Arjun Kasturi" }
]

dependencies = [
    "numpy>=2.0",
    "opencv-python>=4.10",
    "torch>=2.3",
    "ultralytics>=8.3",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

addopts = [
    "-ra",
]

markers = [
    "integration: marks tests requiring external models or end-to-end pipelines",
]

filterwarnings = [
    "ignore::DeprecationWarning",
]